--- a/app/style.scss
+++ b/app/style.scss
@@ -1,4 +1,4 @@
-@import '../jspm_packages/npm/@angular/material@2.0.0-alpha.10/core/theming/all-theme';
+@import 'node_modules/@angular/material/core/theming/_all-theme';
 
 // NOTE: Theming is currently experimental and not yet publically released!
 
